added dynamic title to all templates

--- a/src/bonus_content/templates/choose_your_offer_type.html
+++ b/src/bonus_content/templates/choose_your_offer_type.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Choose your offer type{% endblock %}
+
 {% block content %}
 
 <h2>Choose your offer type</h2>
