--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Mastering the Marketplace</title>
+    <title>{% block title %}Mastering the Marketplace{% endblock %}</title></title>
     <meta name="description" content="Mastering the Marketplace is a learning library for building offers on the Microsoft commercial marketplace. Videos, sample code, and hands-on labs.">
     <meta charset="UTF-8">
     <link rel="icon" href="/static/favicon.ico">
