--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Mastering the Marketplace{% endblock %}
+
 {% block content %}
 
     <h2 style="margin-bottom: 20px;">Mastering the Marketplace</h2>
