--- a/src/bonus_content/templates/playbooks.html
+++ b/src/bonus_content/templates/playbooks.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Playbooks{% endblock %}
+
 {% block content %}
 
 <h2>Mastering the Marketpalce Playbooks</h2>
