--- a/src/content/templates/content_index.html
+++ b/src/content/templates/content_index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+
+{% block title %}{{ model.content['title'] }}{% endblock %}
+
 {% block content %}
 
-    <div class="mb-3">
-      <h2 class="content-detail-title">{{ model.content['title'] }}</h2>
-    </div>
-
+    
+    <h2 class="content-detail-title">{{ model.content['title'] }}</h2>
+    
     <!-- links to video and other artifacts -->
     <div class="mb-3">
       <div class="btn-group content-links" role="group" aria-label="Content links">
