--- a/src/search/templates/search_index.html
+++ b/src/search/templates/search_index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block title %}Search results{% endblock %}
+
 {% block content %}
     <h2>Results for "{{ model.get_search_term()}}"</h2>
 
