--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,17 @@
 <!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
-  {% include 'head.html' %}
+  
+  <head>
+    <title>{% block title %}Mastering the Marketplace{% endblock %}</title></title>
+    <meta name="description" content="Mastering the Marketplace is a learning library for building offers on the Microsoft commercial marketplace. Videos, sample code, and hands-on labs.">
+    <meta charset="UTF-8">
+    <link rel="icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" type="text/css" />
+    <link rel="stylesheet" href="/static/style.css"/>
+  </head>
 
   <body>
     {% include 'top-nav.html' %}
