updated to community image.

--- a/src/templates/news_carousel.html
+++ b/src/templates/news_carousel.html
@@ -8,8 +8,8 @@
       </a>
     </div>
     <div class="carousel-item">
-      <a href="https://aka.ms/MTMworkshops" target="_blank">
-        <img src="{{ url_for('static', filename = 'carousel-news-items/workshops.png') }}" class="news-image d-block w-100" alt="Workshops" />
+      <a href="https://techcommunity.microsoft.com/t5/marketplace-community/bd-p/Marketplace-Forum" target="_blank">
+        <img src="{{ url_for('static', filename = 'carousel-news-items/community.png') }}" class="news-image d-block w-100" alt="community" />
       </a>
     </div>
     <div class="carousel-item">
