Update page titles and headings

--- a/src/bonus_content/templates/playbooks.html
+++ b/src/bonus_content/templates/playbooks.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Playbooks{% endblock %}
+{% block title %}Marketplace Playbooks{% endblock %}
 
 {% block content %}
 
-<h2>Mastering the Marketpalce Playbooks</h2>
+<h2>Marketplace Playbooks</h2>
 
 <p>
     Playbooks are comprehensive guides that provide readers with knowledge and resources to work effectively with the Microsoft commercial marketplace. 
