--- a/src/content/templates/content_log.html
+++ b/src/content/templates/content_log.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}What's new on the site{% endblock %}
+{% block title %}New on the site{% endblock %}
 
 {% block content %}
 
 <div>
-    <h2>Most recent content changes</h2>
+    <h2>New on the site</h2>
 
     <table class="table table-striped table-hover">`
         <thead>
