Fix typos and add video and image resources to choose_your_offer_type.html

--- a/src/bonus_content/templates/choose_your_offer_type.html
+++ b/src/bonus_content/templates/choose_your_offer_type.html
@@ -7,15 +7,23 @@
 <h2>Choose your offer type</h2>
 
 <p>
-    One of the first decisions to make in your amrketplace journey is what type of offer you want to create.
+    One of the first decisions to make in your marketplace journey is what type of offer you want to create.
     This page has resources to walk you throught this decision.
 </p>
-<p>
-    Primary considerations for choosing an offer type include billing options and deployment architectures. 
-</p>
 
+<h4>Watch the walkthrough video</h4>
+<p>
+    This video walks you through the decision of what type of offer is a good fit for your solution.
+</p>
+<div>
+    <a href="{{ url_for('content.index', content_id='c3f1c260-c8e9-487d-9eff-909923083c55') }}" class="btn btn-primary">Watch it now</a>
+</div>
+
+<h4 style="margin-top: 30px;">Offer type decision map</h4>
 <div>
     <img src="{{ url_for('bonus_content.static', filename='choose_your_offer_type.avif') }}" width="900px" alt="Offer type image">
 </div>
+
+
 
 {% endblock %}
