--- a/src/static/style.css
+++ b/src/static/style.css
@@ -6,6 +6,10 @@ a, a:hover {
     color: #3b2e58;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: #3b2e58;
+}
+
 .accordion-button {
     box-shadow: none !important;
     color: #3b2e58 !important;
